dev/ingress/fake12-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake12-ingress
  namespace: fake12-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake12.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake12-service
                port:
                  number: 20012
